--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
   <description>Eclipse plugins created by the mmm project.</description>
 
   <properties>
-    <tycho.version>0.22.0</tycho.version>
-    <tycho-extras.version>0.22.0</tycho-extras.version>
+    <tycho.version>1.3.0</tycho.version>
+    <tycho-extras.version>1.3.0</tycho-extras.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
-    <eclipse-repo.url>http://download.eclipse.org/releases/juno</eclipse-repo.url>
+    <eclipse-repo.url>http://download.eclipse.org/releases/2018-12</eclipse-repo.url>
   </properties>
 
   <modules>
