--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.sf.m-m-m</groupId>
   <artifactId>eclipse-templatevariables</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Eclipse plugins created by the mmm project.</description>
 
   <properties>
-    <tycho.version>0.22.0</tycho.version>
-    <tycho-extras.version>0.22.0</tycho-extras.version>
+    <tycho.version>1.3.0</tycho.version>
+    <tycho-extras.version>1.3.0</tycho-extras.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
-    <eclipse-repo.url>http://download.eclipse.org/releases/juno</eclipse-repo.url>
+    <eclipse-repo.url>http://download.eclipse.org/releases/2018-12</eclipse-repo.url>
   </properties>
 
   <modules>
